<resources>
    <string name="app_name">Do you even scale</string>
    <string name="title_activity_data_manager">Manage data</string>
    <string name="title_activity_editor_edit">Edit %1$s</string>

    <!-- INTERVALS -->
    <string name="interval_prime">Prime</string>
    <string name="interval_minor_second">Minor Second</string>
    <string name="interval_major_second">Major Second</string>
    <string name="interval_minor_third">Minor Third</string>
    <string name="interval_major_third">Major Third</string>
    <string name="interval_fourth">Fourth</string>
    <string name="interval_tritone">Tritone</string>
    <string name="interval_fifth">Fifth</string>
    <string name="interval_minor_sixth">Minor Sixth</string>
    <string name="interval_major_sixth">Major Sixth</string>
    <string name="interval_minor_seventh">Minor Seventh</string>
    <string name="interval_major_seventh">Major Seventh</string>

    <!-- SCALES -->
    <string name="scale_ionian_major_name">Ionian major</string>
    <string name="scale_dorian_minor_name">Dorian minor</string>
    <string name="scale_phrygian_minor_name">Phrygian minor</string>
    <string name="scale_lydian_major_name">Lydian major</string>
    <string name="scale_mixolydian_major_name">Mixolydian major</string>
    <string name="scale_aeolian_minor_name">Aeolian minor</string>
    <string name="scale_locrian_minor_name">Locrian minor</string>
    <string name="scale_harmonic_minor_name">Harmonic minor</string>
    <string name="scale_melodic_minor_name">Melodic minor</string>
    <string name="scale_pentatonic_major_name">Major Pentatonic</string>
    <string name="scale_pentatonic_minor_name">Minor pentatonic</string>
    <string name="scale_pentatonic_blues_name">Blues Pentatonic</string>
    <string name="scale_whole_note_name">Whole note</string>

    <!-- TUNINGS -->
    <string name="tuning_violin_name">Violin/Mandolin</string>
    <string name="tuning_viola_name">Viola/Mandola</string>
    <string name="tuning_banjo_sawmill_name">Sawmill</string>
    <string name="tuning_standard_name">Standard Tuning</string>
    <string name="tuning_ukulele_baritone_name">Baritone</string>
    <string name="tuning_ukulele_soprano_name">Soprano</string>
    <string name="tuning_dropd_name">Drop D</string>
    <string name="tuning_dropc_name">Drop C</string>
    <string name="tuning_doublec_name">Double C</string>
    <string name="tuning_openc_name">Open C</string>
    <string name="tuning_opend_name">Open D</string>
    <string name="tuning_opendm_name">Open Dm</string>
    <string name="tuning_guitar_dadgad_name">Open Dsus4 (DADGAD)</string>
    <string name="tuning_openg_name">Open G</string>
    <string name="tuning_opengm_name">Open Gm</string>
    <string name="tuning_fulldown_name">Standard (1 step down)</string>
    <string name="tuning_halfdown_name">Standard (½ step down)</string>

    <!-- INSTRUMENTS -->
    <string name="instrument_guitar_name">Guitar</string>
    <string name="instrument_bass_4str_name">Bass</string>
    <string name="instrument_bass_5str_name">Bass (5-string)</string>
    <string name="instrument_bass_6str_name">Bass (6-string)</string>
    <string name="instrument_banjo_4str_name">Banjo (Tenor)</string>
    <string name="instrument_banjo_5str_name">Banjo (Bluegrass)</string>
    <string name="instrument_mandolin_name">Mandolin</string>
    <string name="instrument_ukulele_name">Ukulele</string>

    <!-- UI ELEMENTS -->
    <string name="lbl_tuning_text">Tuning</string>
    <string name="lbl_frets_shown_text">Frets</string>
    <string name="lbl_fret_range_to">to</string>
    <string name="lbl_scale_name_text">Scale</string>
    <string name="dialog_title_fret_range">Select the range of frets to show</string>
    <string name="dialog_title_note_picker">Select the root note</string>
    <string name="tab_title_dm_instruments">Instruments</string>
    <string name="tab_title_dm_tunings">Tunings</string>
    <string name="tab_title_dm_scales">Scales</string>
    <string name="save">Save</string>
    <string name="lbl_instrument_string_count">Number of strings</string>
    <string name="name">Name</string>
    <string name="tab_title_dm_presets">Presets</string>
    <string name="action_create_entity_title">Create new</string>
    <string name="action_restore_defaults_title">Restore defaults</string>
    <string name="lbl_scale_intervals">Intervals</string>
    <string name="dialog_title_intervals">Select an interval</string>
    <string name="lbl_instrument_preset_instrument">Instrument</string>
    <string name="lbl_instrument_preset_tuning">Tuning</string>
    <string name="lbl_instrument_preset_scale">Scale</string>
    <string name="lbl_instrument_preset_fretrange">Show frets</string>
    <string name="lbl_string_pitches">String pitches</string>
    <string name="entity_instrument">instrument</string>
    <string name="entity_preset">preset</string>
    <string name="entity_tuning">tuning</string>
    <string name="entity_scale">scale</string>
    <string name="lbl_tuning_instrument">For instrument</string>
    <string name="msg_entity_name_is_blank">The name must not be empty</string>
    <string name="msg_tuning_string_count_mismatch">Tuning for instrument \'%1$s\' needs to have %2$d string pitches</string>
    <string name="msg_no_instrument_selected">Please select an instrument</string>
    <string name="msg_no_tuning_selected">Please select the default tuning</string>
    <string name="msg_no_scale_type_selected">Please select the default scale</string>
    <string name="title_activity_editor_create">Create new %1$s</string>
    <string name="msg_no_intervals">Please select at least one interval</string>
    <string name="prefs_category_core">General</string>
    <string name="prefs_title_keep_awake">Keep screen awake</string>
    <string name="prefs_description_keep_awake">Keep the screen on while viewing scales.</string>
    <string name="action_settings_title">Settings</string>
    <string name="action_manage_data_title">Manage data</string>
    <string name="prefs_category_appearance">Appearance</string>
    <string name="prefs_title_app_theme">Theme</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_device">Follow device theme</string>
    <string name="prefs_description_app_theme">Choose the app\'s theme</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_device">Device default</string>
    <string name="prefs_title_screen_orientation">Screen orientation</string>
    <string name="prefs_title_screen_orientation_global">Apply orientation to whole app</string>
    <string name="prefs_description_orientation_global">If checked, the orientation selected above will be applied to all activities instead of just the main fretboard view.</string>
    <string name="prefs_category_other">Miscellaneous</string>
    <string name="prefs_title_about">About</string>
    <string name="prefs_description_about">View information about this app and the libraries it uses.</string>
    <string name="app_author" translatable="false">Antoni0 Sali3ri</string>
    <string name="app_github_url" translatable="false">https://github.com/antoni0sali3ri/doyouevenscale</string>
    <string name="app_description">An app for viewing scales on a fretboard. Intended to be a tool to assist players of fretted instruments practice and learn.</string>
    <string name="fret_spacing_constant">Constant</string>
    <string name="fret_spacing_equal_temperament">Equal temperament</string>
    <string name="prefs_category_description_core">Manage the app\'s behaviour and general preferences.</string>
    <string name="prefs_category_description_appearance">Change the app theme and adust how the fretboard is displayed.</string>
    <string name="prefs_category_appearance_fretboard">Fretboard display</string>
    <string name="prefs_title_fret_spacing">Fret spacing</string>
    <string name="prefs_description_fret_spacing">Define how the frets are laid out.\n\'Constant\' -> spaces the frets evenly across the available space.\n\'Equal temperament\' -> spaces the frets according to equal temperament (i.e. higher frets have less space between them)</string>
    <string name="prefs_title_changelog">Changelog</string>
    <string name="prefs_description_changelog">See what\'s new in this version</string>
    <string name="prefs_title_full_screen">Start in full screen mode</string>
    <string name="prefs_description_full_screen">Hint: Double tap the fretboard to toggle full screen mode.</string>
    <string name="action_full_screen_title">Full screen</string>
</resources>