<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.FretboardFragment">

    <com.github.antoni0sali3ri.doyouevenscale.ui.view.FretboardView
        android:id="@+id/fretboardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="24dp"
        app:backgroundColor="@color/colorFretboardBackground"
        app:inlayColor="@color/colorFretboardInlays"
        app:fretColor="@color/colorFretboardFrets"
        app:stringColor="@color/colorFretboardStrings"
        app:noteStrokeColor="@color/colorFretboardNoteStroke"
        app:noteColor="@color/colorFretboardNotes"
        app:highlightColor="@color/colorFretboardNotesHighlight"
        app:labelColor="@color/colorFretboardLabels"
        app:layout_constraintBottom_toTopOf="@id/layFretboardControls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layFretboardControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fretboardView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:animateLayoutChanges="true">

            <TableRow
                android:layout_height="@dimen/controls_row_height"
                android:minHeight="@dimen/controls_row_height">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblScaleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:lines="1"
                    style="@style/AppSpinnerTitle"
                    android:text="@string/lbl_scale_name_text"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtRootNote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/AppSpinnerItem"
                        />

                    <Spinner
                        android:id="@+id/spinnerScaleType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:spinnerMode="dialog" />

                    <ImageView
                        android:id="@+id/btnExpandControls"
                        android:layout_width="@dimen/button_expand_size"
                        android:layout_height="@dimen/button_expand_size"
                        android:src="@drawable/ic_expand_less" />
                </LinearLayout>
            </TableRow>

            <TableRow android:id="@+id/tblRowTuning"
                android:layout_height="@dimen/controls_row_height"
                android:minHeight="@dimen/controls_row_height"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblTuning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:lines="1"
                    style="@style/AppSpinnerTitle"
                    android:text="@string/lbl_tuning_text"
                    />

                <Spinner
                    android:id="@+id/spinnerTuning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:spinnerMode="dialog" />

            </TableRow>

            <TableRow android:id="@+id/tblRowFretRange"
                android:layout_height="@dimen/controls_row_height"
                android:minHeight="@dimen/controls_row_height"
                android:visibility="gone"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblFretsShown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:lines="1"
                    style="@style/AppSpinnerTitle"
                    android:text="@string/lbl_frets_shown_text"
                    />

                <LinearLayout
                    android:id="@+id/layFretRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/spinnerMinFret"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppSpinnerItem"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/lblFretRangeTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_fret_range_to"
                        style="@style/AppSpinnerItem"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/spinnerMaxFret"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppSpinnerItem"
                        />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>